--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&family=Poppins:wght@100;200;300;400;500;600&display=swap');
+
+
 *{
+    font-family: 'poppins', sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -39,7 +43,7 @@ button{
     left: 50%;
     transform: translate(-50%,150%);
     z-index: 1  ;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'poppins', sans-serif;
 }
 
 .duck{ 
